syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginData {
  string token = 1;
  string user_id = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string role = 6;
}

message LoginResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  LoginData data = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message RegisterData {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
}

message RegisterResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  RegisterData data = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenData {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string role = 4;
}

message ValidateTokenResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  ValidateTokenData data = 4;
}

message LogoutRequest {
  string token = 1;
}

message LogoutData {
  bool revoked = 1;
}

message LogoutResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  LogoutData data = 4;
}
